tests/architecture/fixtures/fail/src/dialogos/application/bad.py
from __future__ import annotations

from dialogos.adapters.tmux_sender import TmuxSender


def build_sender() -> TmuxSender:
    return TmuxSender()
